--- a/multitab/style/style.css
+++ b/multitab/style/style.css
@@ -1,2 +1,79 @@
 @charset "UTF-8";
 @import url(style_reset.css);
+
+h1{
+    margin: 40px;
+    text-align: center;
+}
+
+div#wrap{
+    width: 1300px;
+    padding: 40px;
+    margin: 40px auto;
+    border: 1px solid #000;
+}
+
+#contents{
+    width: 1200px;
+    margin: 0 auto;
+    border: 4px solid #aaa;
+}
+
+#contents>div{
+    width: 400px;
+    height: 200px;
+    padding: 4px;
+    margin: 4px;
+    border: 1px solid #f88;
+}
+
+/* 멀티탭 영역 시작 */
+
+button.tabBtn{
+    font-size: 20px;
+    font-weight: bold;
+    padding: 4px 14px;
+    border: 1px solid #aaa;
+    position: relative;
+    top: 1px;
+
+    cursor: pointer;
+}
+
+button.tabBtn:first-child{
+    left: 6px;
+    background-color: #fff;
+    border-bottom-color: #fff;
+}
+
+div.tabContents{
+    padding: 4px;
+    border: 1px solid #aaa;
+}
+
+div.tabContents table{
+    width: 100%;
+    /*border: 1px solid #0ff;*/
+}
+
+/*#noticeArea{
+    display: none;
+}*/
+
+div#noticeArea td{
+    line-height: 34px;
+}
+
+#galleryArea{
+    display: none;
+}
+
+#galleryArea td{
+    height: 140px;
+    text-align: center;
+}
+
+
+/* 멀티탭 영역 끝 */
+
+
